refactor footer links; update section titles and improve link relevance for better navigation

--- a/about-us.html
+++ b/about-us.html
@@ -282,9 +282,9 @@
 
     @media (max-width: 480px) {
       .value-card {
-        flex: 0 0 calc(50% - 10px);
-        max-width: calc(50% - 10px);
-        min-width: 140px;
+        flex: 0 0 100%;
+        max-width: 100%;
+        min-width: 100%;
       }
 
       .title {
@@ -306,13 +306,6 @@
 
       .core-values {
         padding: 30px 15px;
-      }
-    }
-
-    @media (max-width: 360px) {
-      .value-card {
-        flex: 0 0 100%;
-        max-width: 100%;
       }
     }
 
@@ -1021,12 +1014,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-4">
-          <h5>ABOUT US</h5>
+          <h5>Quick Links</h5>
           <ul class="footer-menu">
-            <li><a href="index.html">Homes</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about-us.html">About us</a></li>
-            <li><a href="packages.html">Packages</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="exclusivepackages.html">Exclusive Packages</a></li>
+            <li><a href="curatedpackages.html">Curated Packages</a></li>
+            <!-- <li><a href="blog.html">Blog</a></li> -->
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
