--- a/index.html
+++ b/index.html
@@ -434,6 +434,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg1.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">Unveil the Heart of Goa with Chalo Goa!</h2>
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+                MORE</a>
             </div>
             <!-- end container -->
           </div>
@@ -443,6 +445,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg2.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">Goa’s Hidden Gems Await – Chalo Goa!</h2>
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+                MORE</a>
             </div>
             <!-- end container -->
           </div>
@@ -453,6 +457,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg3.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">Your Ultimate Goan Adventure Begins with Chalo Goa!</h2>
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+                MORE</a>
             </div>
             <!-- end container -->
           </div>
@@ -463,6 +469,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg4.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">More Than a Trip, It’s a Goan Experience – Chalo Goa!</h2>
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+                MORE</a>
             </div>
             <!-- end container -->
           </div>
@@ -925,11 +933,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-4">
-          <h5>ABOUT US</h5>
+          <h5>Quick Links</h5>
           <ul class="footer-menu">
-            <li><a href="index.html">Homes</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about-us.html">About us</a></li>
-            <li><a href="packages.html">Packages</a></li>
+            <li><a href="exclusivepackages.html">Exclusive Packages</a></li>
+            <li><a href="curatedpackages.html">Curated Packages</a></li>
             <!-- <li><a href="blog">Blog</a></li> -->
             <li><a href="contact.html">Contact</a></li>
           </ul>
