--- a/contact.html
+++ b/contact.html
@@ -620,11 +620,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-4">
-          <h5>ABOUT US</h5>
+          <h5>Quick Links</h5>
           <ul class="footer-menu">
-            <li><a href="index.html">Homes</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about-us.html">About us</a></li>
-            <li><a href="packages.html">Packages</a></li>
+            <li><a href="exclusivepackages.html">Exclusive Packages</a></li>
+            <li><a href="curatedpackages.html">Curated Packages</a></li>
             <!-- <li><a href="blog">Blog</a></li> -->
             <li><a href="contact.html">Contact</a></li>
           </ul>
