refactor contact information; update email and phone links for improved accessibility and usability

--- a/about-us.html
+++ b/about-us.html
@@ -1043,10 +1043,10 @@
             India
           </address>
           <div class="contact-info">
-            <p><i class="fa fa-envelope"></i> hello@thesafarisutra.com</p>
-            <p><i class="fa fa-envelope"></i> sales@thesafarisutra.com</p>
-            <p><i class="fa fa-phone"></i> 9967572970</p>
-            <p><i class="fa fa-phone"></i> +919429690981</p>
+            <p><a href="mailto:hello@thesafarisutra.com"><i class="fa fa-envelope"></i> hello@thesafarisutra.com</a></p>
+            <p><a href="mailto:sales@thesafarisutra.com"><i class="fa fa-envelope"></i> sales@thesafarisutra.com</a></p>
+            <p><a href="tel:+919967572970"><i class="fa fa-phone"></i> +91 9967572970</a></p>
+            <p><a href="tel:+919429690981"><i class="fa fa-phone"></i> +91 9429690981</a></p>
           </div>
         </div>
         <!-- end col-3 -->
