refactor footer sections; update "PACKAGES" to "POLICIES" for improved clarity and relevance

--- a/about-us.html
+++ b/about-us.html
@@ -1026,13 +1026,10 @@
         </div>
         <!-- end col-3 -->
         <div class="col-lg-4 col-md-4">
-          <h5>PACKAGES</h5>
+          <h5>POLICIES</h5>
           <ul class="footer-menu">
-            <li><a href="#">Pickup Locations</a></li>
             <li><a href="#">Terms of Payment</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Difficulty Levels</a></li>
-            <li><a href="#">Where to Find Us</a></li>
           </ul>
         </div>
         <!-- end col-3 -->
