--- a/index.html
+++ b/index.html
@@ -434,7 +434,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg1.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">Unveil the Heart of Goa with Chalo Goa!</h2>
-              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png"
+                  alt="Image">LEARN
                 MORE</a>
             </div>
             <!-- end container -->
@@ -445,7 +446,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg2.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">Goa’s Hidden Gems Await – Chalo Goa!</h2>
-              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png"
+                  alt="Image">LEARN
                 MORE</a>
             </div>
             <!-- end container -->
@@ -457,7 +459,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg3.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">Your Ultimate Goan Adventure Begins with Chalo Goa!</h2>
-              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png"
+                  alt="Image">LEARN
                 MORE</a>
             </div>
             <!-- end container -->
@@ -469,7 +472,8 @@
           <div class="slide-inner bg-image" data-background="images/Packages/bg4.jpg">
             <div class="container">
               <h2 data-swiper-parallax="-300">More Than a Trip, It’s a Goan Experience – Chalo Goa!</h2>
-              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png" alt="Image">LEARN
+              <a href="about-us.html" class="link" data-swiper-parallax="-100"><img src="images/arrow-link.png"
+                  alt="Image">LEARN
                 MORE</a>
             </div>
             <!-- end container -->
@@ -933,7 +937,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-4">
-          <h5>Quick Links</h5>
+          <h5>QUICK LINKS</h5>
           <ul class="footer-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about-us.html">About us</a></li>
@@ -945,13 +949,10 @@
         </div>
         <!-- end col-3 -->
         <div class="col-lg-4 col-md-4">
-          <h5>PACKAGES</h5>
+          <h5>POLICIES</h5>
           <ul class="footer-menu">
-            <li><a href="#">Pickup Locations</a></li>
             <li><a href="#">Terms of Payment</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Difficulty Levels</a></li>
-            <li><a href="#">Where to Find Us</a></li>
           </ul>
         </div>
         <!-- end col-3 -->
